@@ -173,7 +173,7 @@ module Sequel
     # This method guesses whether the record exists when
     # <tt>new_record</tt> is set to false.
     def initialize(values = {}, new_record = false, &block)
-      @values = values
+      @values = values || {}
       @changed_columns = []
 
       @new = new_record
